--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
 # manifest.yml
 name: mNY
-version: 0.250701.001
+version: 0.250702.1
 description: "mNY description"
 authors:
-  - Y.Song@morphosis.net
+  - YD Song
 keywords: [test1, test2]
 icon: icon.png
