--- a/manifest.yml
+++ b/manifest.yml
@@ -1,15 +1,12 @@
 # manifest.yml
 name: mNY
-version: 0.250702.8
+version: 0.250702.9
 description: "mNY description"
 authors:
   - YD Song
 
 icon: icon.png
 
-# This is the most important part for you!
-# It defines the commands this package adds to Rhino.
-commands:
-  - name: Mny # The command you type in Rhino.
-    # The path to the script to run, relative to this manifest.yml file.
-    path: lib/mny_command.p
+files:
+  - Direct_Sunlight_Analysis.gh
+  - install.py
